--- a/results/M2/configuration.yaml
+++ b/results/M2/configuration.yaml
@@ -66,7 +66,7 @@ checkpoint_settings:
   run_id: M2
   initialize_from: null
   load_model: false
-  resume: false
+  resume: true
   force: true
   train_model: false
   inference: false
