--- a/results/M3/configuration.yaml
+++ b/results/M3/configuration.yaml
@@ -37,7 +37,7 @@ behaviors:
     init_path: null
     keep_checkpoints: 5
     checkpoint_interval: 500000
-    max_steps: 20000000
+    max_steps: 35000000
     time_horizon: 64
     summary_freq: 50000
     threaded: false
@@ -66,7 +66,7 @@ checkpoint_settings:
   run_id: M3
   initialize_from: null
   load_model: false
-  resume: false
+  resume: true
   force: true
   train_model: false
   inference: false
